Change site font fix main logo wrapping improve posts list date layout

--- a/_sass/_assets/_buttons.scss
+++ b/_sass/_assets/_buttons.scss
@@ -3,7 +3,7 @@
   -webkit-border-radius: 0.5em;
   -moz-border-radius: 0.5em;
   border-radius: 0.5em;
-  font-family: PressStart2P, "Lucida Grande", monospace;
+  font-family: 'Press Start 2P', "Lucida Grande", monospace;
   font-size: 18px;
   padding: 0.4em 0.8em 0.4em 0.8em;
   margin: 0.5em;
