--- a/css/main.scss
+++ b/css/main.scss
@@ -4,9 +4,8 @@
 @charset "utf-8";
 
 
-
 // Our variables
-$base-font-family: Georgia, Cambria, sans-serif;
+$base-font-family: "Lucida Sans Unicode", "Lucida Grande", Verdana, Arial, Helvetica, sans-serif;
 $base-font-size:   21px;
 $base-font-weight: 100;
 $small-font-size:  $base-font-size * 0.875;
